lib/llm/tests/snapshots/preprocessor__multi_turn_with_system_with_tools@meta-llama_llama-3_1-70b-instruct--1605565.snap
---
source: lib/llm/tests/preprocessor.rs
expression: formatted_prompt
info:
  messages:
    - role: system
      content: You are a very helpful assistant!
    - role: user
      content: How do I reverse a string in Python?
    - role: assistant
      content: "You can reverse a string in Python using slicing:\n\n```python\nreversed_string = your_string[::-1]\n```\n\nAlternatively, you can use `reversed()` with `join()`:\n\n```python\nreversed_string = ''.join(reversed(your_string))\n```\n"
    - role: user
      content: What if I want to reverse each word in a sentence but keep their order?
  model: meta-llama_llama-3_1-70b-instruct--1605565
  tools:
    - type: function
      function:
        name: get_current_temperature
        description: Get the current temperature for a specific location
        parameters:
          type: object
          properties:
            location:
              type: string
              description: "The city and state, e.g., San Francisco, CA"
            unit:
              type: string
              enum:
                - Celsius
                - Fahrenheit
              description: "The temperature unit to use. Infer this from the user's location."
          required:
            - location
            - unit
    - type: function
      function:
        name: get_rain_probability
        description: Get the probability of rain for a specific location
        parameters:
          type: object
          properties:
            location:
              type: string
              description: "The city and state, e.g., San Francisco, CA"
          required:
            - location
  tool_choice: auto
---
<|begin_of_text|><|start_header_id|>system<|end_header_id|>

Environment: ipython
Cutting Knowledge Date: December 2023
Today Date: <redacted>

You are a very helpful assistant!<|eot_id|><|start_header_id|>user<|end_header_id|>

Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.

Respond in the format {"name": function name, "parameters": dictionary of argument name and its value}.Do not use variables.

{
    "type": "function",
    "function": {
        "name": "get_current_temperature",
        "description": "Get the current temperature for a specific location",
        "parameters": {
            "type": "object",
            "properties": {
                "location": {
                    "type": "string",
                    "description": "The city and state, e.g., San Francisco, CA"
                },
                "unit": {
                    "type": "string",
                    "enum": [
                        "Celsius",
                        "Fahrenheit"
                    ],
                    "description": "The temperature unit to use. Infer this from the user's location."
                }
            },
            "required": [
                "location",
                "unit"
            ]
        }
    }
}

{
    "type": "function",
    "function": {
        "name": "get_rain_probability",
        "description": "Get the probability of rain for a specific location",
        "parameters": {
            "type": "object",
            "properties": {
                "location": {
                    "type": "string",
                    "description": "The city and state, e.g., San Francisco, CA"
                }
            },
            "required": [
                "location"
            ]
        }
    }
}

How do I reverse a string in Python?<|eot_id|><|start_header_id|>assistant<|end_header_id|>

You can reverse a string in Python using slicing:

```python
reversed_string = your_string[::-1]
```

Alternatively, you can use `reversed()` with `join()`:

```python
reversed_string = ''.join(reversed(your_string))
```<|eot_id|><|start_header_id|>user<|end_header_id|>

What if I want to reverse each word in a sentence but keep their order?<|eot_id|><|start_header_id|>assistant<|end_header_id|>
